# telegram-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
scripts/: set_webhook.py
tests/: __init__.py  test_webhook.py
